Bug 92917 - Impress 64-bit crash when I open .PPSX or .PPTX with MP3 sound
Summary: Impress 64-bit crash when I open .PPSX or .PPTX with MP3 sound
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.0.0.3 rc
Hardware: x86-64 (AMD64) All
: high major
Assignee: Julien Nabet
URL:
Whiteboard: noRepro:Windows7sp1:64-bit:5.1.0alpha...
Keywords: haveBacktrace
Depends on: 97195
Blocks:
  Show dependency treegraph
 
Reported: 2015-07-24 16:16 UTC by Flávio Luís Alves
Modified: 2021-06-02 11:41 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Impress Crash (9.28 KB, image/png)
2015-07-24 16:16 UTC, Flávio Luís Alves
Details
Impress stopped (234.81 KB, image/png)
2015-07-24 16:46 UTC, Flávio Luís Alves
Details
Example (6.80 MB, application/vnd.openxmlformats-officedocument.presentationml.slideshow)
2015-07-24 16:49 UTC, Flávio Luís Alves
Details
bt Windows (windbg) (67.64 KB, text/plain)
2019-05-27 10:06 UTC, Julien Nabet
Details
bt with debug symbols (14.61 KB, text/plain)
2021-06-01 10:24 UTC, Julien Nabet
Details
Valgrind trace (577.35 KB, text/x-log)
2021-06-01 10:55 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Flávio Luís Alves 2015-07-24 16:16:35 UTC
Created attachment 117420 [details]
Impress Crash

When trying to open a file with extension .ppsx LibreOffice 5.0 RC3 ( X86_64 ) closes and the message attached.

After a while the message LibreOffice stopped working .

Strange because in earlier works perfectly .

Thank You.
Comment 1 Flávio Luís Alves 2015-07-24 16:46:00 UTC
Created attachment 117421 [details]
Impress stopped
Comment 2 Flávio Luís Alves 2015-07-24 16:49:49 UTC
Created attachment 117422 [details]
Example
Comment 3 Flávio Luís Alves 2015-07-24 21:12:14 UTC
In the 32 bit version 5.0 RC3 is working properly.

Unfortunately the 64-bit version is not yet working properly.

Probably should contain hundreds of bugs.

I continue using the 32 -bit version for now .
Comment 4 V Stuart Foote 2015-07-25 02:07:31 UTC
Can not confirm, on Windows 7sp1 64-bit en-US with
Version: 5.0.0.3 (x64)
Build ID: f79b5ba13f5e6cbad23f8038060e556217e66632
Locale: en-US (en_US)

Will play the slideshow, bug issues of bug 91574 are present for that build. And the build also unrepentantly closes LibreOffice when slideshow is exited.


Same system with
Version: 5.1.0.0.alpha1+
Build ID: 8cfdd81b70ef37927b40497ffd10034f28335034
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-24_02:47:18
Locale: en-US (en_US)

The MS .ppsx slideshow opens and plays. Slides advance, and controls are visible.

However, exiting the slideshow also closes LibreOffice unrepentantly.
Comment 5 periegutierrez 2016-12-02 06:36:35 UTC
This is to confirm that the issue is still existing for Windows 8.1Pro 64 bit Libreoffice 5.2.3.3 (x64)
Comment 6 QA Administrators 2017-12-03 18:57:57 UTC Comment hidden (obsolete)
Comment 7 Julien Nabet 2019-05-27 10:06:15 UTC
Created attachment 151699 [details]
bt Windows (windbg)

On Win10 with master sources updated some days ago, I didn't see any crash when trying to reproduce this.
But when I rename your ppsx file to pptx file, I had a crash when escaping the animation.
Comment 8 Xisco Faulí 2019-05-27 10:36:59 UTC
(In reply to Julien Nabet from comment #7)
> Created attachment 151699 [details]
> bt Windows (windbg)
> 
> On Win10 with master sources updated some days ago, I didn't see any crash
> when trying to reproduce this.
> But when I rename your ppsx file to pptx file, I had a crash when escaping
> the animation.

I can't reproduce it in

Versión: 6.2.3.2
Id. de compilación: aecc05fe267cc68dde00352a451aa867b3b546ac
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; VCL: win; 
Configuración regional: es-ES (es_ES); Idioma de IU: es-ES
Calc: threaded
Comment 9 Julien Nabet 2019-06-03 14:32:53 UTC
Here's a crash with 6.2.3.2 on Win10 when typing ESC at the end of the pptx (so when I renamed the ppsx file):
http://crashreport.libreoffice.org/stats/crash_details/40efec02-7204-4b10-9ef3-f938fe26e897
Comment 10 Timur 2021-06-01 09:55:23 UTC
Repro crash on open with LO 7.2+ 64-bit, Windows Skia, GDI and Linux GEN, GTK3.
Also repro if only 1st page saved separately in MSO as PPSX or PPTX.
Seems related to sound media. 
No repro 7.2+ 32-bit in Windows.
Comment 11 Julien Nabet 2021-06-01 10:24:34 UTC
Created attachment 172527 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today + gtk3 rendering, I got a crash
Comment 12 Julien Nabet 2021-06-01 10:55:31 UTC
Created attachment 172528 [details]
Valgrind trace

Just in case if it can help
Comment 13 Julien Nabet 2021-06-01 17:19:54 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/116551
Comment 14 Commit Notification 2021-06-02 06:39:05 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7e9c3569f9258877b5303f041283d4882d1290fe

tdf#92917: fix crash in Impress in viewmediashape (slideshow)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Julien Nabet 2021-06-02 08:16:20 UTC
The patch doesn't build on 7.1 branch (see https://gerrit.libreoffice.org/c/core/+/116461).
I'm not "fluent" enough about OutputDevice and Window. If someone wants to give it a try, don't hesitate of course! :-)
Comment 16 Timur 2021-06-02 08:34:12 UTC
Crash I saw in Linux in LO 7.2+ is a new one, not seen in 7.1 for me. 

Report was originally Windows LO 5.0, I didn't repro that, original prez was slow to start, but no crash.
I saw Escape problem n 5.0 but not in 7.1.
So this should be tested again, with the fix, let's hope it will be OK.
Comment 17 Timur 2021-06-02 10:09:13 UTC Comment hidden (obsolete)
Comment 18 Xisco Faulí 2021-06-02 11:03:40 UTC
(In reply to Timur from comment #16)
> Crash I saw in Linux in LO 7.2+ is a new one, not seen in 7.1 for me. 
> 
> Report was originally Windows LO 5.0, I didn't repro that, original prez was
> slow to start, but no crash.
> I saw Escape problem n 5.0 but not in 7.1.
> So this should be tested again, with the fix, let's hope it will be OK.

This crash was introduced by

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9090dc1f3b27195f5defd35586ac79357992be21

author	Noel Grandin <noelgrandin@gmail.com>	2021-01-18 18:27:19 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-05-17 12:56:51 +0200
commit 9090dc1f3b27195f5defd35586ac79357992be21 (patch)
tree d39f4b624ae337d5c9ce76eba8521b76e53afa05
parent c8cf2e0e088b74afa52564945a9c005b3b86bf7e (diff)
split OutputDevice from Window

Bisected  with bibisect-linux64-7.2

@Timur, you should have created a new report instead of reusing this one, IMHO
Comment 19 Xisco Faulí 2021-06-02 11:04:19 UTC
(In reply to Julien Nabet from comment #15)
> The patch doesn't build on 7.1 branch (see
> https://gerrit.libreoffice.org/c/core/+/116461).
> I'm not "fluent" enough about OutputDevice and Window. If someone wants to
> give it a try, don't hesitate of course! :-)

Verified in

Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 8771f48512ed19197c17506f522578f43b092b21
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

No need for backport because the issue is master only
Comment 20 Xisco Faulí 2021-06-02 11:05:02 UTC
(In reply to Julien Nabet from comment #9)
> Here's a crash with 6.2.3.2 on Win10 when typing ESC at the end of the pptx
> (so when I renamed the ppsx file):
> http://crashreport.libreoffice.org/stats/crash_details/40efec02-7204-4b10-
> 9ef3-f938fe26e897

Do you still reproduce this in a master branch after you fix ?
Comment 21 Timur 2021-06-02 11:41:25 UTC
(In reply to Xisco Faulí from comment #18)
> @Timur, you should have created a new report instead of reusing this one,
> IMHO
Only later I figured out that this was new in 7.2.
Anyway, whole report was slim, confirmed by reporter himself.

Flávio: please test with master when published. 
Master is at https://dev-builds.libreoffice.org/daily/master/current.html and it's date should be later than 2021-06-02 06:39:05 UTC  (so likely tomorrow) .
Master is separate to your working LO (which should be 7.0.6 or 7.1.3 now).